@@ -1,3 +1,10 @@
+2005-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/documentation/Makefile.am:
+	* src/htdocs/documentation/licensing.xml:
+	* src/htdocs/documentation/licensingfaq.xml:
+	  remove faq here and point to faq in faq.  faq off.
+
 2005-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/news/news.xml:
